--- a/Kattis/Cold-puter Science/package.json
+++ b/Kattis/Cold-puter Science/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "cold.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "kattis_test": "type 1.in | node cold.js > out1.txt && FC out1.txt 1.ans && type 2.in | node cold.js > out2.txt && FC out2.txt 2.ans && echo \"All Kattis sample test cases passed!\""
   },
   "repository": {
     "type": "git",
