--- a/Kattis/Loop/package.json
+++ b/Kattis/Loop/package.json
@@ -5,7 +5,7 @@
   "main": "loop.js",
   "scripts": {
     "test": "jest",
-    "kattis_test": "type 1.in | node loop.js > out1.txt && FC out1.txt 1.ans && type 2.in | node loop.js > out2.txt && FC out2.txt 2.ans && type 3.in | node loop.js > out3.txt && FC out3.txt 3.ans && echo \"All Kattis sample test cases passed!\""
+    "kattis_test": "type 1.in | node loop.js > out1.txt && FC out1.txt 1.ans && type 2.in | node loop.js > out2.txt && FC out2.txt 2.ans && echo \"All Kattis sample test cases passed!\""
   },
   "repository": {
     "type": "git",
