--- a/Project3/.vscode/tasks.json
+++ b/Project3/.vscode/tasks.json
@@ -1,8 +1,23 @@
 {
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "explorer",    
     "windows": {
         "command": "explorer.exe"
     },
-    "args": ["TTT.html"]
+    "args": [
+        "TTT.html"
+    ],
+    "tasks": [
+        {
+            "label": "explorer.exe",
+            "args": [
+                "TTT.html"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        }
+    ]
 }
